tests/baselines/reference/declarationFilesForNodeNativeModules(allowarbitraryextensions=false).errors.txt
tests/cases/conformance/nonjsExtensions/main.ts(1,22): error TS6263: Module './dir/native.node' was resolved to 'tests/cases/conformance/nonjsExtensions/dir/native.d.node.ts', but '--allowArbitraryExtensions' is not set.


==== tests/cases/conformance/nonjsExtensions/main.ts (1 errors) ====
    import mod = require("./dir/native.node");
                         ~~~~~~~~~~~~~~~~~~~
!!! error TS6263: Module './dir/native.node' was resolved to 'tests/cases/conformance/nonjsExtensions/dir/native.d.node.ts', but '--allowArbitraryExtensions' is not set.
    mod.doNativeThing("good");
    
==== tests/cases/conformance/nonjsExtensions/package.json (0 errors) ====
    {"type": "module"}
==== tests/cases/conformance/nonjsExtensions/dir/package.json (0 errors) ====
    {"type": "commonjs"}
==== tests/cases/conformance/nonjsExtensions/dir/native.d.node.ts (0 errors) ====
    export function doNativeThing(flag: string): unknown;